--- a/src/components/StopPairsList/StopPairsList.scss
+++ b/src/components/StopPairsList/StopPairsList.scss
@@ -41,7 +41,10 @@
     // flex-wrap: wrap;
 
     @include tablet {
-      width: 45%;
+      width: calc(50% - 1rem);
+    }
+    @include desktop {
+      width: calc(33.33% - 1rem);
     }
 
     &:hover {
